# fea_libs

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.conan.txt  CMakeLists.global.txt  CMakeLists.txt  appveyor.yml  conanfile.py  conanfile.txt  readme.md  requirements.txt
.github/: settings.yml
.github/workflows/: c-cpp.yml  ci.yml  cmake.yml
benchmarks/: main.cpp
benchmarks/containers/: id_slotmap.cpp  unsigned_hole_hashmap.cpp  unsigned_slotsets.cpp
benchmarks/flat_recurse/: flat_recurse.cpp  iterators.hpp
benchmarks/functional/: function.cpp
benchmarks/state_machines/: state_machines.cpp
docs/: benchmark.md  defensive.md  flat_recurse.md  getopt.md  unsigned_map.md  unsigned_map_benchmarks.md  utils.md
tests_cpp14/: main.cpp
tests_cpp14/ai/: utility_ai.cpp
tests_cpp14/benchmark/: benchmark.cpp
tests_cpp14/containers/: circle_array.cpp  circle_array.hpp  enum_array.cpp  flat_unsigned_hashmap.cpp  flat_unsigned_map.cpp  id_flat_slotmap.cpp  id_lookup.cpp  id_slotmap.cpp  span.cpp  stack_vector.cpp  unsigned_map.cpp
tests_cpp14/defensive/: defensive.cpp
tests_cpp14/enum/: enum_array.cpp  enum_set.cpp  utility.cpp
tests_cpp14/events/: event_stack.cpp  event_system.cpp  event_tests.cpp
tests_cpp14/flat_recurse/: benchmarks.cpp  containers.cpp  global.hpp  node_uptr.cpp  node_uptr.hpp
tests_cpp14/functional/: callback.cpp  function.cpp  function_benchmarks.cpp  function_view.cpp
tests_cpp14/graph/: lazy_graph.cpp  lazy_graph_mt.cpp
tests_cpp14/graphs/: lazy_graph.cpp  lazy_graph_mt.cpp
tests_cpp14/macros/: literals.cpp  macros.cpp
tests_cpp14/maps/: benchmarks_flat_unsigned_hashmap.cpp  benchmarks_unsigned_map.cpp  flat_unsigned_hashmap.cpp  flat_unsigned_map.cpp  type_map.cpp  unsigned_map.cpp
tests_cpp14/math/: math.cpp
tests_cpp14/memory/: memory.cpp  pimpl_ptr.cpp
tests_cpp14/meta/: function_traits.cpp  if_constexpr.cpp  macros.cpp  non_type_traits.cpp  pack.cpp  static_for.cpp  traits.cpp  tuple.cpp  type_map.cpp  type_pack.cpp
tests_cpp14/numerics/: literals.cpp  random.cpp
tests_cpp14/performance/: constants.cpp  constants2.cpp  cpu_info.cpp  simd.cpp  simd_register.cpp  simd_register_traits.cpp  simd_version.cpp
tests_cpp14/simd/: simd.cpp  simd_register.cpp  simd_register_traits.cpp  simd_register_unavailable.cpp  simd_version.cpp
tests_cpp14/terminal/: utf8.cpp
tests_cpp14/time/: delta_time.cpp  high_range_duration.cpp  time.cpp
tests_cpp14/unsigned_map/: flat_unsigned_hashmap.cpp  unsigned_map.cpp
tests_cpp14/utils/: cpu_info.cpp  cpu_info_macos.hpp  cpu_info_macos_tests.hpp  cpu_info_tests.cpp  enum.cpp  memory.cpp  random.cpp  serialize.cpp
tests_cpp17/: main.cpp
tests_cpp17/ai/: htn.cpp  utility_ai.cpp
tests_cpp17/algorithm/: sort.cpp
tests_cpp17/benchmark/: benchmark.cpp
tests_cpp17/containers/: benchmarks_flat_unsigned_hashmap.cpp  benchmarks_unsigned_map.cpp  circle_array.cpp  circle_array.hpp  deque_list.cpp  enum_array.cpp  enum_set.cpp  flat_id_slotmap.cpp  growing_array.cpp  growing_array.hpp  id_flat_slotmap.cpp  id_set.cpp  id_slot_lookup.cpp  id_slotmap.cpp  span.cpp  stack_vector.cpp  type_map.cpp  unsigned_compact_slotset.cpp  unsigned_hole_hashmap.cpp  unsigned_set.cpp  unsigned_slotset.cpp
tests_cpp17/data/: fmap_test.txt  text_file_crlf.txt
tests_cpp17/defensive/: defensive.cpp
tests_cpp17/descriptors/: descriptor_map.cpp  descriptors.cpp
tests_cpp17/enum/: enum_array.cpp  enum_set.cpp  enum_strings.cpp  enum_to_strings.cpp  enum_to_strings_legacy.cpp  enum_traits.cpp  safe_switch.cpp  string_enum.cpp  utility.cpp
tests_cpp17/events/: event_stack.cpp  event_system.cpp
tests_cpp17/experiments/: blog_mini_language.cpp  blog_nodes.cpp  cpp17_playground.cpp  playground.cpp  return_overload.cpp  vector.hpp  vector.imp.hpp
tests_cpp17/flat_recurse/: benchmarks.cpp  octree.cpp  small_obj.cpp  small_obj.hpp
tests_cpp17/functional/: callback.cpp  func_ptr.cpp  function.cpp  function_benchmarks.cpp
tests_cpp17/getopt/: getopt.cpp
tests_cpp17/graphs/: lazy_graph.cpp  lazy_graph_mt.cpp
tests_cpp17/image/: bmp.cpp
tests_cpp17/iso_codes/: language.cpp  language_gen_header.cpp
tests_cpp17/macros/: enum_to_strings.cpp  enum_to_strings_legacy.cpp  literals.cpp  macros.cpp
tests_cpp17/maps/: named_tuple.cpp  type_map.cpp
tests_cpp17/math/: interpolation.cpp  linear_algebra.cpp  moving_average.cpp  statistics.cpp
tests_cpp17/memory/: back_ptr.cpp  fmap.cpp  memory.cpp  pimpl_ptr.cpp
tests_cpp17/meta/: defensive.cpp  enum_traits.cpp  function_traits.cpp  non_type_traits.cpp  pack.cpp  safe_switch.cpp  static_for.cpp  traits.cpp  tuple.cpp
tests_cpp17/numerics/: clamp_cast.cpp  clamped_value.cpp  fixed.cpp  literals.cpp  numerics.cpp  random.cpp
tests_cpp17/performance/: constants.cpp  constants2.cpp  cpu_info.cpp  cpu_info_macos.hpp  intrinsics.cpp  thread.cpp  tls.cpp
tests_cpp17/reflection/: reflection.cpp
tests_cpp17/serialize/: serialize.cpp  versioned_data.cpp
tests_cpp17/state_machines/: benchmarks.cpp  constexpr_fsm.cpp  constexpr_fsm_win.cpp  fsm.cpp  fsm_nothrow.cpp  hfsm.cpp  inline_fsm.cpp
tests_cpp17/string/: conversions.cpp  regex.cpp  replace.cpp  split.cpp  string.cpp
tests_cpp17/terminal/: translate_io.cpp  translation_mode.cpp  utf8_io.cpp
tests_cpp17/time/: delta_time.cpp  high_range_duration.cpp  time.cpp  timer.cpp
tests_cpp17/utility/: bitmask.cpp  error.cpp  file.cpp  platform.cpp  scope.cpp
tests_cpp17/utils/: bitmask.cpp  cpu_info_macos_tests.hpp  cpu_info_tests.cpp  enum.cpp  file.cpp  intrinsics.cpp  platform.cpp  regex.cpp  scope.cpp  serialize.cpp  string.cpp  string_conversions.cpp  thread.cpp  utils.cpp
tests_cpp20/containers/: jump_span.cpp
tests_cpp20/descriptors/: config_map.cpp
tests_cpp20/encoding/: base64.cpp
tests_cpp20/enum/: enum_to_strings.cpp
tests_cpp20/experiments/: cpp20_playground.cpp  similarity_map.cpp  vertical_iterators.cpp
tests_cpp20/graphs/: flat_bf_graph.cpp  flat_bf_graph.hpp
tests_cpp20/iso_codes/: language.cpp  language_gen_header.cpp
tests_pipe/: main.cpp
(+327 files in other folders)
